replace semi-colons by colons remove tmp files now compatible with R 3.0.0

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,16 @@
 Package: RSvgDevice
-Version: 0.6.4.2
-Date:    2009-01-04
-Title:   An R SVG graphics device.
-Author:  T Jake Luciani <jakeluciani@yahoo.com>, MAtthieu Decorde <matthieu.decorde@ens-lyon.fr>
-Maintainer: T Jake Luciani <jakeluciani@yahoo.com>
+Version: 0.6.4.3
+Date: 2013-07-02
+Title: An R SVG graphics device.
+Author: T Jake Luciani <jakeluciani@yahoo.com>, Matthieu Decorde
+        <matthieu.decorde@ens-lyon.fr>, Vaudor Lise <lise.vaudor@ens-lyon.fr>
+Maintainer: Matthieu Decorde <matthieu.decorde@ens-lyon.fr>
 Depends: R (>= 2.6.0)
-Description: A graphics device for R that uses the w3.org xml
-             standard for Scalable Vector Graphics.
+Description: A graphics device for R that uses the w3.org xml standard
+        for Scalable Vector Graphics.
 License: GPL (>= 2)
-URL:     http://www.darkridge.com/~jake/RSvg/ ; https://github.com/mdecorde/RSvgDevice
-Packaged: Sun Jan  4 13:04:29 2009; hornik
+URL: https://github.com/mdecorde/RSvgDevice
+Packaged: 2013-02-11 09:02:21 UTC; mdecorde
+OS_type: unix
+Repository: CRAN
+Date/Publication: 2013-02-11 19:32:15
