--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: RSvgDevice
 Version: 0.6.4.3
-Date: 2013-07-02
-Title: An R SVG graphics device.
-Author: T Jake Luciani <jakeluciani@yahoo.com>, Matthieu Decorde
-        <matthieu.decorde@ens-lyon.fr>, Vaudor Lise <lise.vaudor@ens-lyon.fr>
-Maintainer: Matthieu Decorde <matthieu.decorde@ens-lyon.fr>
+Title: A SVG Graphics Device
+Description: A graphics device for R that produces "Scalable Vector Graphics".
+Authors@R: c(
+  person("T Jake", "Luciani", , "jakeluciani@yahoo.com", "aut"),
+  person("Matthieu", "Decorde", , "matthieu.decorde@ens-lyon.fr", c("aut", "cre")),
+  person("Vaudor", "Lise", , "lise.vaudor@ens-lyon.fr", "aut")
+  )
 Depends: R (>= 2.6.0)
-Description: A graphics device for R that uses the w3.org xml standard
-        for Scalable Vector Graphics.
 License: GPL (>= 2)
 URL: https://github.com/mdecorde/RSvgDevice
-Repository: CRAN
+BugReports: https://github.com/mdecorde/RSvgDevice/issues
