Add me (and RStudio) to authors

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,9 @@ Description: A graphics device for R that produces "Scalable Vector Graphics".
 Authors@R: c(
   person("T Jake", "Luciani", , "jakeluciani@yahoo.com", "aut"),
   person("Matthieu", "Decorde", , "matthieu.decorde@ens-lyon.fr", c("aut", "cre")),
-  person("Vaudor", "Lise", , "lise.vaudor@ens-lyon.fr", "aut")
+  person("Vaudor", "Lise", , "lise.vaudor@ens-lyon.fr", "aut"),
+  person("Hadley", "Wickham", , "hadley@rstudio.com", "aut"),
+  person("RStudio", role = "cph")
   )
 Depends: R (>= 3.0.0)
 License: GPL (>= 2)
