--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,9 @@ Authors@R: c(
   person("RStudio", role = "cph")
   )
 Depends: R (>= 3.0.0)
-Suggests: xml2
+Suggests:
+  testthat,
+  xml2
 License: GPL (>= 2)
 URL: https://github.com/mdecorde/RSvgDevice
 BugReports: https://github.com/mdecorde/RSvgDevice/issues
