add Håkon Malmedal to the authors

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,7 @@ Authors@R: c(
   person("Vaudor", "Lise", , "lise.vaudor@ens-lyon.fr", "aut"),
   person("Hadley", "Wickham", , "hadley@rstudio.com", "aut"),
   person("David", "Gohel", role = "ctb", comment = "Line dashing code"),
+  person("Håkon", "Malmedal", role = "ctb"),
   person("RStudio", role = "cph")
   )
 Depends: R (>= 3.0.0)
