--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,10 +13,13 @@ Authors@R: c(
   )
 Encoding: UTF-8
 Depends: R (>= 3.0.0)
-Suggests:
+Suggests: 
   htmltools,
   testthat,
   xml2
+LinkingTo: 
+  Rcpp
 License: GPL (>= 2)
 URL: https://github.com/mdecorde/RSvgDevice
 BugReports: https://github.com/mdecorde/RSvgDevice/issues
+Imports: Rcpp
