--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,13 +13,16 @@ Authors@R: c(
   )
 Encoding: UTF-8
 Depends: R (>= 3.0.0)
-Suggests: 
+Suggests:
   htmltools,
   testthat,
   xml2
-LinkingTo: 
-  Rcpp
+Imports: Rcpp
+LinkingTo:
+  Rcpp,
+  gdtools
 License: GPL (>= 2)
 URL: https://github.com/mdecorde/RSvgDevice
 BugReports: https://github.com/mdecorde/RSvgDevice/issues
-Imports: Rcpp
+Remotes:
+  davidgohel/gdtools
