update travis with gdtools dependency

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ warnings_are_errors: true
 
 r_github_packages:
   - jimhester/covr
+  - davidgohel/gdtools
 after_success:
   - Rscript -e 'covr::codecov()'
