--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: RSvgDevice
+Package: svglite
 Version: 0.6.4.9000
-Title: A SVG Graphics Device
+Title: A Lightweight SVG Graphics Device
 Description: A graphics device for R that produces "Scalable Vector Graphics".
 Authors@R: c(
   person("T Jake", "Luciani", , "jake@apache.org", "aut"),
@@ -12,17 +12,18 @@ Authors@R: c(
   person("RStudio", role = "cph")
   )
 Encoding: UTF-8
-Depends: R (>= 3.0.0)
+Depends:
+    R (>= 3.0.0)
 Suggests:
-  htmltools,
-  testthat,
-  xml2
+    htmltools,
+    testthat,
+    xml2
 Imports:
-  Rcpp,
-  gdtools
-LinkingTo:
-  Rcpp,
-  gdtools
+    Rcpp,
+    gdtools
+LinkingTo: Rcpp,
+    gdtools
 License: GPL (>= 2)
-URL: https://github.com/hadley/RSvgDevice
-BugReports: https://github.com/hadley/RSvgDevice/issues
+URL: https://github.com/hadley/svglite
+BugReports: https://github.com/hadley/svglite/issues
+RoxygenNote: 5.0.0
