--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,28 +1,30 @@
 Package: svglite
-Version: 0.6.4.9000
-Title: A Lightweight SVG Graphics Device
-Description: A graphics device for R that produces "Scalable Vector Graphics".
+Version: 0.9.9.9000
+Title: A SVG Graphics Device
+Description: A graphics device for R that produces 'Scalable Vector Graphics'.
 Authors@R: c(
-  person("T Jake", "Luciani", , "jake@apache.org", "aut"),
   person("Hadley", "Wickham", , "hadley@rstudio.com", c("aut", "cre")),
+  person("T Jake", "Luciani", , "jake@apache.org", "aut"),
   person("Matthieu", "Decorde", , "matthieu.decorde@ens-lyon.fr", "aut"),
   person("Vaudor", "Lise", , "lise.vaudor@ens-lyon.fr", "aut"),
   person("David", "Gohel", role = "ctb", comment = "Line dashing code and raster code"),
+  person("Yixuan", "Qiu", role = "ctb", comment = "Improved styles; polypath implementation"),
   person("Håkon", "Malmedal", role = "ctb", comment = "Opacity code"),
   person("RStudio", role = "cph")
   )
 Encoding: UTF-8
 Depends:
     R (>= 3.0.0)
+Imports:
+    Rcpp,
+    gdtools
+LinkingTo:
+    Rcpp,
+    gdtools
 Suggests:
     htmltools,
     testthat,
     xml2
-Imports:
-    Rcpp,
-    gdtools
-LinkingTo: Rcpp,
-    gdtools
 License: GPL (>= 2)
 URL: https://github.com/hadley/svglite
 BugReports: https://github.com/hadley/svglite/issues
