--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,6 +2,7 @@ Package: svglite
 Version: 0.9.9.9000
 Title: A SVG Graphics Device
 Description: A graphics device for R that produces 'Scalable Vector Graphics'.
+  'svglite' is a fork of the older 'RSvgDevice' package.
 Authors@R: c(
   person("Hadley", "Wickham", , "hadley@rstudio.com", c("aut", "cre")),
   person("T Jake", "Luciani", , "jake@apache.org", "aut"),
