--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(editSVG)
 export(htmlSVG)
 export(svglite)
 export(xmlSVG)
+export(stringSVG)
 importFrom(Rcpp,sourceCpp)
 importFrom(gdtools,raster_view)
 useDynLib(svglite)
