--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
 language: r
-sudo: required
+cache: packages
 
-warnings_are_errors: true
-
-r_github_packages:
-  - jimhester/covr
 after_success:
   - Rscript -e 'covr::codecov()'
