--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ LinkingTo:
 Suggests:
     htmltools,
     testthat,
-    xml2
+    xml2,
+    covr
 License: GPL (>= 2)
 URL: https://github.com/hadley/svglite
 BugReports: https://github.com/hadley/svglite/issues
