Use xml2::xml_find_first() instead of deprecated xml2::xml_find_one()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,7 @@ Suggests:
     testthat,
     xml2,
     covr
+Remotes: hadley/xml2
 License: GPL (>= 2)
 URL: https://github.com/hadley/svglite
 BugReports: https://github.com/hadley/svglite/issues
