--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,9 +27,8 @@ LinkingTo:
 Suggests:
     htmltools,
     testthat,
-    xml2,
+    xml2 (>= 1.0.0),
     covr
-Remotes: hadley/xml2
 License: GPL (>= 2)
 URL: https://github.com/hadley/svglite
 BugReports: https://github.com/hadley/svglite/issues
