--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,8 @@ Suggests:
     testthat,
     xml2 (>= 1.0.0),
     covr
+Remotes:
+    davidgohel/gdtools#31
 License: GPL (>= 2)
 URL: https://github.com/hadley/svglite
 BugReports: https://github.com/hadley/svglite/issues
