--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,9 +28,11 @@ Suggests:
     htmltools,
     testthat,
     xml2 (>= 1.0.0),
-    covr
+    covr,
+    fontquiver
 Remotes:
-    davidgohel/gdtools#31
+    davidgohel/gdtools#31,
+    lionel-/fontquiver#6
 License: GPL (>= 2)
 URL: https://github.com/hadley/svglite
 BugReports: https://github.com/hadley/svglite/issues
