--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: svglite
-Version: 1.1.0.9000
+Version: 1.1.0.9001
 Title: An 'SVG' Graphics Device
 Description: A graphics device for R that produces 'Scalable Vector Graphics'.
   'svglite' is a fork of the older 'RSvgDevice' package.
@@ -29,7 +29,7 @@ Suggests:
     testthat,
     xml2 (>= 1.0.0),
     covr,
-    fontquiver
+    fontquiver (>= 0.1.0.9001)
 Remotes:
     davidgohel/gdtools#32,
     lionel-/fontquiver#6
