--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,7 @@ Suggests:
     knitr,
     rmarkdown
 License: GPL (>= 2)
-URL: https://github.com/hadley/svglite
-BugReports: https://github.com/hadley/svglite/issues
+URL: https://github.com/r-lib/svglite
+BugReports: https://github.com/r-lib/svglite/issues
 RoxygenNote: 5.0.1
 VignetteBuilder: knitr
