--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,8 @@ Suggests:
     covr,
     fontquiver (>= 0.2.0),
     knitr,
-    rmarkdown
+    rmarkdown,
+    ggplot2
 License: GPL (>= 2)
 URL: https://github.com/r-lib/svglite
 BugReports: https://github.com/r-lib/svglite/issues
