--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,8 +33,7 @@ Suggests:
     covr,
     fontquiver (>= 0.2.0),
     knitr,
-    rmarkdown,
-    ggplot2
+    rmarkdown
 License: GPL (>= 2)
 URL: https://github.com/r-lib/svglite
 BugReports: https://github.com/r-lib/svglite/issues
