--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ export(svglite)
 export(svgstring)
 export(xmlSVG)
 importFrom(Rcpp,sourceCpp)
-importFrom(gdtools,raster_view)
+importFrom(systemfonts,font_info)
+importFrom(systemfonts,match_font)
 useDynLib(svglite)
