--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,20 +11,22 @@ Authors@R: c(
   person("Matthieu", "Decorde", , "matthieu.decorde@ens-lyon.fr", "aut"),
   person("Vaudor", "Lise", , "lise.vaudor@ens-lyon.fr", "aut"),
   person("Tony", "Plate", role = "ctb", comment = "Early line dashing code"),
-  person("David", "Gohel", role = "ctb", comment = "Line dashing code and raster code"),
+  person("David", "Gohel", role = "ctb", comment = "Line dashing code and early raster code"),
   person("Yixuan", "Qiu", role = "ctb", comment = "Improved styles; polypath implementation"),
   person("Håkon", "Malmedal", role = "ctb", comment = "Opacity code"),
   person("RStudio", role = "cph")
   )
 Encoding: UTF-8
+SystemRequirements: 
+    libpng
 Depends:
     R (>= 3.0.0)
 Imports:
     Rcpp,
-    gdtools (>= 0.1.6)
+    systemfonts (>= 0.2.3)
 LinkingTo:
     Rcpp,
-    gdtools,
+    systemfonts,
     BH
 Suggests:
     htmltools,
