--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Authors@R: c(
   )
 Encoding: UTF-8
 SystemRequirements: 
+    C++11,
     libpng
 Depends:
     R (>= 3.0.0)
@@ -26,8 +27,7 @@ Imports:
     systemfonts (>= 0.2.3)
 LinkingTo:
     Rcpp,
-    systemfonts,
-    BH
+    systemfonts
 Suggests:
     htmltools,
     testthat,
