--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,7 +37,7 @@ Suggests:
     knitr,
     rmarkdown
 License: GPL (>= 2)
-URL: https://github.com/r-lib/svglite
+URL: https://svglite.r-lib.org, https://github.com/r-lib/svglite
 BugReports: https://github.com/r-lib/svglite/issues
 RoxygenNote: 7.1.0
 VignetteBuilder: knitr
