--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(stringSVG)
 export(svglite)
 export(svgstring)
 export(xmlSVG)
-importFrom(Rcpp,sourceCpp)
+importFrom(cpp11,cpp_source)
 importFrom(systemfonts,font_info)
 importFrom(systemfonts,match_font)
 useDynLib(svglite)
