--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,10 +13,9 @@ export(stringSVG)
 export(svglite)
 export(svgstring)
 export(xmlSVG)
-importFrom(cpp11,cpp_source)
 importFrom(systemfonts,font_feature)
 importFrom(systemfonts,font_info)
 importFrom(systemfonts,match_font)
 importFrom(systemfonts,register_font)
 importFrom(systemfonts,register_variant)
-useDynLib(svglite)
+useDynLib(svglite, .registration = TRUE)
