--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ Authors@R: c(
            comment = "Improved styles; polypath implementation"),
     person("Håkon", "Malmedal", role = "ctb",
            comment = "Opacity code"),
-    person("RStudio", role = c("cph", "fnd"))
+    person("Posit, PBC", role = c("cph", "fnd"))
   )
 Description: A graphics device for R that produces 'Scalable Vector
     Graphics'. 'svglite' is a fork of the older 'RSvgDevice' package.
@@ -25,7 +25,7 @@ License: GPL (>= 2)
 URL: https://svglite.r-lib.org, https://github.com/r-lib/svglite
 BugReports: https://github.com/r-lib/svglite/issues
 Depends:
-    R (>= 3.0.0)
+    R (>= 3.5.0)
 Imports:
     systemfonts (>= 1.0.0)
 Suggests:
@@ -34,7 +34,7 @@ Suggests:
     htmltools,
     knitr,
     rmarkdown,
-    testthat,
+    testthat (>= 3.0.0),
     xml2 (>= 1.0.0)
 LinkingTo:
     cpp11,
@@ -46,3 +46,4 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 SystemRequirements: C++11, libpng
+Config/testthat/edition: 3
