--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -8,6 +8,9 @@ template:
     in_header: |
       <script defer data-domain="svglite.r-lib.org,all.tidyverse.org" src="https://plausible.io/js/plausible.js"></script>
 
+development:
+  mode: auto
+
 news:
   releases:
   - text: "Version 2.0.0"
