--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,5 +45,5 @@ Config/Needs/website: tidyverse/tidytemplate
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
-SystemRequirements: C++11, libpng
+SystemRequirements: libpng
 Config/testthat/edition: 3
