GHA: use CRAN's libpng lib on macOS, not brew
svglite currently does not work with brew.

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -52,10 +52,9 @@ jobs:
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
 
-      - name: Install libpng on macOS
-        if: runner.os == 'macOS'
-        run: |
-          brew install libpng
+      - uses: r-hub/actions/setup-r-sysreqs@v1
+        with:
+          type: minimal
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
