--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,3 +47,4 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 SystemRequirements: libpng
 Config/testthat/edition: 3
+Config/build/compilation-database: true
