--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(stringSVG)
 export(svglite)
 export(svgstring)
 export(xmlSVG)
+import(rlang)
+importFrom(lifecycle,deprecated)
 importFrom(systemfonts,font_feature)
 importFrom(systemfonts,font_info)
 importFrom(systemfonts,match_font)
