--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,8 +25,11 @@ License: GPL (>= 2)
 URL: https://svglite.r-lib.org, https://github.com/r-lib/svglite
 BugReports: https://github.com/r-lib/svglite/issues
 Depends:
-    R (>= 3.5.0)
+    R (>= 4.0)
 Imports:
+    cli,
+    lifecycle,
+    rlang (>= 1.1.0),
     systemfonts (>= 1.0.0)
 Suggests:
     covr,
@@ -39,12 +42,13 @@ Suggests:
 LinkingTo:
     cpp11,
     systemfonts
-VignetteBuilder: 
+VignetteBuilder:
     knitr
+Config/build/compilation-database: true
 Config/Needs/website: tidyverse/tidytemplate
+Config/testthat/edition: 3
+Config/usethis/last-upkeep: 2024-10-23
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
 SystemRequirements: libpng
-Config/testthat/edition: 3
-Config/build/compilation-database: true
