fix import of textshaping

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,4 +20,5 @@ importFrom(systemfonts,font_info)
 importFrom(systemfonts,match_font)
 importFrom(systemfonts,register_font)
 importFrom(systemfonts,register_variant)
+importFrom(textshaping,text_width)
 useDynLib(svglite, .registration = TRUE)
