finish up font work

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(create_svgz)
 export(editSVG)
 export(font_face)
 export(font_feature)
+export(fonts_as_import)
 export(htmlSVG)
 export(register_font)
 export(register_variant)
@@ -17,6 +18,7 @@ import(rlang)
 importFrom(lifecycle,deprecated)
 importFrom(systemfonts,font_feature)
 importFrom(systemfonts,font_info)
+importFrom(systemfonts,fonts_as_import)
 importFrom(systemfonts,match_font)
 importFrom(systemfonts,register_font)
 importFrom(systemfonts,register_variant)
