--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,10 +28,11 @@ BugReports: https://github.com/r-lib/svglite/issues
 Depends:
     R (>= 4.1)
 Imports:
+    base64enc,
     cli,
     lifecycle,
     rlang (>= 1.1.0),
-    systemfonts (>= 1.0.0),
+    systemfonts (>= 1.2.3),
     textshaping (>= 0.3.0)
 Suggests:
     covr,
